@@ -1,20 +1,20 @@
 package com.hhoa.kline.core.core.context.instructions.userinstructions;
 
 import com.hhoa.kline.core.core.prompts.ResponseFormatter;
+import com.hhoa.kline.core.core.shared.remoteconfig.RemoteConfigSettings;
 import com.hhoa.kline.core.core.storage.GlobalFileNames;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 
-/** 负责获取和刷新全局和本地的 Cline 规则 */
+/** 负责获取和刷新全局和本地的 Cline 规则。 */
 @Slf4j
 public class ClineRules {
 
@@ -22,69 +22,114 @@ public class ClineRules {
     public static class RuleTogglesResult {
         private final Map<String, Boolean> globalToggles;
         private final Map<String, Boolean> localToggles;
+        private final Map<String, Boolean> remoteToggles;
 
         public RuleTogglesResult(
-                Map<String, Boolean> globalToggles, Map<String, Boolean> localToggles) {
+                Map<String, Boolean> globalToggles,
+                Map<String, Boolean> localToggles,
+                Map<String, Boolean> remoteToggles) {
             this.globalToggles = globalToggles;
             this.localToggles = localToggles;
+            this.remoteToggles = remoteToggles;
         }
     }
 
-    /**
-     * 获取全局 Cline 规则
-     *
-     * @param globalClineRulesFilePath 全局 Cline 规则文件路径
-     * @param toggles 切换状态
-     * @return 格式化的规则指令，如果没有则返回 null
-     */
     public static String getGlobalClineRules(
             String globalClineRulesFilePath, Map<String, Boolean> toggles) {
+        return getGlobalClineRules(globalClineRulesFilePath, toggles, null, null, null)
+                .getInstructions();
+    }
+
+    public static RuleHelpers.RuleLoadResultWithInstructions getGlobalClineRules(
+            String globalClineRulesFilePath,
+            Map<String, Boolean> toggles,
+            RuleConditionals.RuleEvaluationContext evaluationContext) {
+        return getGlobalClineRules(
+                globalClineRulesFilePath, toggles, evaluationContext, null, null);
+    }
+
+    public static RuleHelpers.RuleLoadResultWithInstructions getGlobalClineRules(
+            String globalClineRulesFilePath,
+            Map<String, Boolean> toggles,
+            RuleConditionals.RuleEvaluationContext evaluationContext,
+            RemoteConfigSettings remoteConfigSettings,
+            Map<String, Boolean> remoteToggles) {
+        String combinedContent = "";
+        List<RuleHelpers.ActivatedConditionalRule> activatedConditionalRules = new ArrayList<>();
+
         try {
             Path path = Paths.get(globalClineRulesFilePath);
-
             if (Files.exists(path)) {
                 if (Files.isDirectory(path)) {
                     try {
                         List<String> rulesFilePaths =
                                 RuleHelpers.readDirectoryRecursive(
                                         globalClineRulesFilePath, "", null);
-                        String rulesFilesTotalContent =
-                                RuleHelpers.getRuleFilesTotalContent(
-                                        rulesFilePaths, globalClineRulesFilePath, toggles);
-
-                        if (rulesFilesTotalContent != null && !rulesFilesTotalContent.isEmpty()) {
-                            return ResponseFormatter.clineRulesGlobalDirectoryInstructions(
-                                    globalClineRulesFilePath, rulesFilesTotalContent);
+                        RuleHelpers.RuleLoadResult result =
+                                RuleHelpers.getRuleFilesTotalContentWithMetadata(
+                                        rulesFilePaths,
+                                        globalClineRulesFilePath,
+                                        toggles,
+                                        new RuleHelpers.RuleLoadOptions(
+                                                evaluationContext,
+                                                RuleHelpers.RuleSourcePrefix.GLOBAL));
+                        if (result.getContent() != null && !result.getContent().isEmpty()) {
+                            combinedContent = result.getContent();
+                            activatedConditionalRules.addAll(
+                                    result.getActivatedConditionalRules());
                         }
                     } catch (Exception e) {
                         log.error(
-                                "Failed to read .clinerules directory at "
-                                        + globalClineRulesFilePath);
-                        e.printStackTrace();
+                                "Failed to read .clinerules directory at {}",
+                                globalClineRulesFilePath,
+                                e);
                     }
                 } else {
-                    log.error(globalClineRulesFilePath + " is not a directory");
-                    return null;
+                    log.error("{} is not a directory", globalClineRulesFilePath);
+                }
+            }
+
+            if (remoteConfigSettings != null
+                    && remoteConfigSettings.getRemoteGlobalRules() != null
+                    && !remoteConfigSettings.getRemoteGlobalRules().isEmpty()) {
+                RuleHelpers.RuleLoadResult remoteResult =
+                        RuleHelpers.getRemoteRulesTotalContentWithMetadata(
+                                remoteConfigSettings.getRemoteGlobalRules(),
+                                remoteToggles,
+                                evaluationContext);
+                if (remoteResult.getContent() != null && !remoteResult.getContent().isEmpty()) {
+                    if (!combinedContent.isEmpty()) {
+                        combinedContent += "\n\n";
+                    }
+                    combinedContent += remoteResult.getContent();
+                    activatedConditionalRules.addAll(remoteResult.getActivatedConditionalRules());
                 }
             }
         } catch (Exception e) {
-            log.error("Error getting global cline rules: " + e.getMessage());
-            e.printStackTrace();
+            log.error("Error getting global cline rules: {}", e.getMessage(), e);
         }
 
-        return null;
+        if (combinedContent.isEmpty()) {
+            return new RuleHelpers.RuleLoadResultWithInstructions(null, List.of());
+        }
+
+        return new RuleHelpers.RuleLoadResultWithInstructions(
+                ResponseFormatter.clineRulesGlobalDirectoryInstructions(
+                        globalClineRulesFilePath, combinedContent),
+                activatedConditionalRules);
     }
 
-    /**
-     * 获取本地 Cline 规则
-     *
-     * @param cwd 当前工作目录
-     * @param toggles 切换状态
-     * @return 格式化的规则指令，如果没有则返回 null
-     */
     public static String getLocalClineRules(String cwd, Map<String, Boolean> toggles) {
+        return getLocalClineRules(cwd, toggles, null).getInstructions();
+    }
+
+    public static RuleHelpers.RuleLoadResultWithInstructions getLocalClineRules(
+            String cwd,
+            Map<String, Boolean> toggles,
+            RuleConditionals.RuleEvaluationContext evaluationContext) {
         String clineRulesFilePath = Paths.get(cwd, GlobalFileNames.CLINE_RULES).toString();
-        String clineRulesFileInstructions = null;
+        String instructions = null;
+        List<RuleHelpers.ActivatedConditionalRule> activatedConditionalRules = new ArrayList<>();
 
         try {
             Path path = Paths.get(clineRulesFilePath);
@@ -92,90 +137,124 @@ public class ClineRules {
             if (Files.exists(path)) {
                 if (Files.isDirectory(path)) {
                     try {
-                        // 排除 .clinerules/workflows 目录
                         List<List<String>> excludedPaths = new ArrayList<>();
-                        excludedPaths.add(Arrays.asList(".clinerules", "workflows"));
+                        excludedPaths.add(List.of("workflows"));
+                        excludedPaths.add(List.of("hooks"));
+                        excludedPaths.add(List.of("skills"));
 
                         List<String> rulesFilePaths =
                                 RuleHelpers.readDirectoryRecursive(
                                         clineRulesFilePath, "", excludedPaths);
 
-                        String rulesFilesTotalContent =
-                                RuleHelpers.getRuleFilesTotalContent(rulesFilePaths, cwd, toggles);
+                        RuleHelpers.RuleLoadResult result =
+                                RuleHelpers.getRuleFilesTotalContentWithMetadata(
+                                        rulesFilePaths,
+                                        clineRulesFilePath,
+                                        toggles,
+                                        new RuleHelpers.RuleLoadOptions(
+                                                evaluationContext,
+                                                RuleHelpers.RuleSourcePrefix.WORKSPACE));
 
-                        if (rulesFilesTotalContent != null && !rulesFilesTotalContent.isEmpty()) {
-                            clineRulesFileInstructions =
+                        if (result.getContent() != null && !result.getContent().isEmpty()) {
+                            instructions =
                                     ResponseFormatter.clineRulesLocalDirectoryInstructions(
-                                            cwd, rulesFilesTotalContent);
+                                            cwd, result.getContent());
+                            activatedConditionalRules.addAll(result.getActivatedConditionalRules());
                         }
                     } catch (Exception e) {
-                        log.error("Failed to read .clinerules directory at " + clineRulesFilePath);
-                        e.printStackTrace();
+                        log.error("Failed to read .clinerules directory at {}", clineRulesFilePath, e);
                     }
                 } else {
                     try {
-                        if (toggles.containsKey(clineRulesFilePath)
+                        if (toggles != null
+                                && toggles.containsKey(clineRulesFilePath)
                                 && !Boolean.FALSE.equals(toggles.get(clineRulesFilePath))) {
-                            String ruleFileContent = Files.readString(path).trim();
-                            if (!ruleFileContent.isEmpty()) {
-                                clineRulesFileInstructions =
-                                        ResponseFormatter.clineRulesLocalFileInstructions(
-                                                cwd, ruleFileContent);
+                            String raw = Files.readString(path).trim();
+                            if (!raw.isEmpty()) {
+                                FrontmatterParser.FrontmatterParseResult parsed =
+                                        FrontmatterParser.parseYamlFrontmatter(raw);
+                                if (parsed.isHadFrontmatter() && parsed.getParseError() != null) {
+                                    instructions =
+                                            ResponseFormatter.clineRulesLocalFileInstructions(
+                                                    cwd, raw);
+                                } else {
+                                    RuleConditionals.ConditionalResult conditionalResult =
+                                            RuleConditionals.evaluateRuleConditionals(
+                                                    parsed.getData(),
+                                                    evaluationContext != null
+                                                            ? evaluationContext
+                                                            : new RuleConditionals.RuleEvaluationContext(
+                                                                    List.of()));
+                                    if (conditionalResult.isPassed()) {
+                                        instructions =
+                                                ResponseFormatter.clineRulesLocalFileInstructions(
+                                                        cwd, parsed.getBody().trim());
+                                        if (parsed.isHadFrontmatter()
+                                                && conditionalResult.getMatchedConditions() != null
+                                                && !conditionalResult
+                                                        .getMatchedConditions()
+                                                        .isEmpty()) {
+                                            activatedConditionalRules.add(
+                                                    new RuleHelpers.ActivatedConditionalRule(
+                                                            "workspace:"
+                                                                    + GlobalFileNames.CLINE_RULES,
+                                                            conditionalResult
+                                                                    .getMatchedConditions()));
+                                        }
+                                    }
+                                }
                             }
                         }
                     } catch (IOException e) {
-                        log.error("Failed to read .clinerules file at " + clineRulesFilePath);
-                        e.printStackTrace();
+                        log.error("Failed to read .clinerules file at {}", clineRulesFilePath, e);
                     }
                 }
             }
         } catch (Exception e) {
-            log.error("Error getting local cline rules: " + e.getMessage());
-            e.printStackTrace();
+            log.error("Error getting local cline rules: {}", e.getMessage(), e);
         }
 
-        return clineRulesFileInstructions;
+        return new RuleHelpers.RuleLoadResultWithInstructions(
+                instructions, activatedConditionalRules);
     }
 
-    /**
-     * 刷新 Cline 规则切换状态 注意：此方法需要 TaskManager 来访问 StateManager 实际使用时需要传入 StateManager 或 TaskManager
-     *
-     * @param workingDirectory 工作目录
-     * @param globalClineRulesToggles 全局 Cline 规则切换状态
-     * @param localClineRulesToggles 本地 Cline 规则切换状态
-     * @return 更新后的切换状态
-     */
     public static RuleTogglesResult refreshClineRulesToggles(
             String globalClineRulesFilePath,
             String workingDirectory,
             Map<String, Boolean> globalClineRulesToggles,
-            Map<String, Boolean> localClineRulesToggles) {
+            Map<String, Boolean> localClineRulesToggles,
+            RemoteConfigSettings remoteConfigSettings,
+            Map<String, Boolean> remoteRulesToggles) {
         try {
             Map<String, Boolean> updatedGlobalToggles =
                     RuleHelpers.synchronizeRuleToggles(
                             globalClineRulesFilePath, globalClineRulesToggles);
-            // 注意：实际使用时需要调用 stateManager.setGlobalState("globalMap<String, Boolean>",
-            // updatedGlobalToggles)
 
-            // 本地切换状态
             String localClineRulesFilePath =
                     Paths.get(workingDirectory, GlobalFileNames.CLINE_RULES).toString();
             List<List<String>> excludedPaths = new ArrayList<>();
-            excludedPaths.add(Arrays.asList(".clinerules", "workflows"));
+            excludedPaths.add(List.of("workflows"));
+            excludedPaths.add(List.of("hooks"));
+            excludedPaths.add(List.of("skills"));
 
             Map<String, Boolean> updatedLocalToggles =
                     RuleHelpers.synchronizeRuleToggles(
                             localClineRulesFilePath, localClineRulesToggles, "", excludedPaths);
-            // 注意：实际使用时需要调用 stateManager.setWorkspaceState("localClineRulesToggles",
-            // updatedLocalToggles)
+            Map<String, Boolean> updatedRemoteToggles =
+                    RuleHelpers.synchronizeRemoteRuleToggles(
+                            remoteConfigSettings != null
+                                    ? remoteConfigSettings.getRemoteGlobalRules()
+                                    : List.of(),
+                            remoteRulesToggles);
 
-            return new RuleTogglesResult(updatedGlobalToggles, updatedLocalToggles);
+            return new RuleTogglesResult(
+                    updatedGlobalToggles, updatedLocalToggles, updatedRemoteToggles);
         } catch (Exception e) {
-            log.error("Failed to refresh cline rules toggles: " + e.getMessage());
-            e.printStackTrace();
+            log.error("Failed to refresh cline rules toggles: {}", e.getMessage(), e);
             return new RuleTogglesResult(
                     globalClineRulesToggles != null ? globalClineRulesToggles : new HashMap<>(),
-                    localClineRulesToggles != null ? localClineRulesToggles : new HashMap<>());
+                    localClineRulesToggles != null ? localClineRulesToggles : new HashMap<>(),
+                    remoteRulesToggles != null ? remoteRulesToggles : new HashMap<>());
         }
     }
 }
